# passgen

./: .gitignore  Cargo.toml  LICENSE  README.md  buildserve.sh  index.html  init_passgen.js  package.json  passgen.css  service-worker.js  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
src/: lib.rs  main.rs  start.rs
src/components/: addone.rs  app.rs  generator_pane.rs  header.rs  mod.rs
src/password/: generator.rs  mod.rs  password.rs  symbol.rs
src/password/symbol/: alphanumeric.rs  mark.rs  mod.rs
static/: index.html  manifest.json  passgen.css  register-worker.js
