[package]
authors = ["hayas1 <h4ystack@gmail.com>"]
description = "simple password generator"
edition = "2018"
license = "MIT"
name = "passgen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "*"
wasm-bindgen = "*"
rand = "*"
itertools = "*"
anyhow = "*"
thiserror = "*"