[package]
authors = ["hayas1 <h4ystack@gmail.com>"]
description = "simple password generator"
edition = "2018"
license = "MIT"
name = "passgen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"] } # latest 2021-04 is 0.8, but it cannot use wasm-bindgen
itertools = "0.10"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.7"
clap = "2.33"
web-sys = "0.3"